# MultiGrid1D

./: .gitignore  LICENSE  README.md
MGBuild/: CMakeLists.txt  Source.cpp
MGBuild/imgui/: imgui.ini
MGBuild/include/: Multigrid1D.h  Multigrid2D.h  color.h  spectral.h
MGBuild/libs/: glfw3.lib
